--- a/public/app/index.html
+++ b/public/app/index.html
@@ -13,6 +13,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-rc.1/angular-ui-router.min.js"></script>
 
+    <script src='libs/angular-upload/angular-upload.min.js'></script>
+    <script src="libs/ng-file-upload/ng-file-upload-shim.min.js"></script>
+    <script src="libs/ng-file-upload-shim/ng-file-upload.min.js"></script>
+
     <script src="app.module.js"></script>
     <script src="services/login.service.js"></script>
     <script src="services/grading.service.js"></script>
