Parsing the zip file

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -21,7 +21,7 @@
     <script src="services/login.service.js"></script>
     <script src="services/grading.service.js"></script>
     <script src="components/header/header.component.js"></script>
-    <script src="components/home/home.component.js"></script>
+    <script src="components/output/output.component.js"></script>
     <script src="components/login/login.component.js"></script>
     <script src="components/grade/grade.component.js"></script>
   </head> 
