--- a/public/app/index.html
+++ b/public/app/index.html
@@ -12,7 +12,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-rc.1/angular-ui-router.min.js"></script>
-
+    <script data-require="angular.js@1.2.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" data-semver="1.2.16"></script>
     <script src='libs/angular-upload/angular-upload.min.js'></script>
     <script src="libs/ng-file-upload/ng-file-upload-shim.min.js"></script>
     <script src="libs/ng-file-upload-shim/ng-file-upload.min.js"></script>
