--- a/public/app/index.html
+++ b/public/app/index.html
@@ -18,6 +18,7 @@
     <script src="libs/ng-file-upload-shim/ng-file-upload.min.js"></script>
 
     <script src="app.module.js"></script>
+    <script src="app.config.js"></script>
     <script src="services/login.service.js"></script>
     <script src="services/grading.service.js"></script>
     <script src="components/header/header.component.js"></script>
