--- a/public/app/index.html
+++ b/public/app/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="libs/angular-loading-bar/build/loading-bar.min.css">
     
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-rc.1/angular-ui-router.min.js"></script>
@@ -16,6 +17,7 @@
     <script src='libs/angular-upload/angular-upload.min.js'></script>
     <script src="libs/ng-file-upload/ng-file-upload-shim.min.js"></script>
     <script src="libs/ng-file-upload-shim/ng-file-upload.min.js"></script>
+    <script src="libs/angular-loading-bar/build/loading-bar.min.js"></script>
 
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
